--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@google/genai": "^1.4.0",
 		"@prisma/client": "^6.5.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-slot": "^1.2.3",
