--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"dependencies": {
 		"@google/genai": "^1.4.0",
+		"@google/generative-ai": "^0.24.1",
 		"@prisma/client": "^6.5.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-slot": "^1.2.3",
