--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"db:migrate": "prisma migrate deploy",
 		"db:push": "prisma db push",
 		"db:studio": "prisma studio",
+		"db:seed": "tsx src/scripts/seedData.ts",
 		"dev": "next dev --turbo",
 		"postinstall": "prisma generate",
 		"preview": "next build && next start",
@@ -45,6 +46,7 @@
 		"postcss": "^8.5.3",
 		"prisma": "^6.5.0",
 		"tailwindcss": "^4.0.15",
+		"tsx": "^4.7.0",
 		"tw-animate-css": "^1.3.4",
 		"typescript": "^5.8.2"
 	},
