--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
 		"@google/genai": "^1.4.0",
 		"@google/generative-ai": "^0.24.1",
 		"@prisma/client": "^6.5.0",
+		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"lucide-react": "^0.514.0",
 		"motion": "^12.17.0",
 		"next": "^15.2.3",
